# thunder-hackathon-2-js-runtime

./: .gitignore  README.md  pyproject.toml  requirements.txt
samples/: hidden_style_features.js  test1_odd_even.js  test2_triangle.js  test3_armstrong.js  test5_palindrome.js
src/js_runtime/: __init__.py  __main__.py  cli.py  engine.py
tests/: test_runtime.py
